nuget installations, mvc organized, php login/signup requests

--- a/GroupMeetup/GroupMeetup/Views/LoginPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/LoginPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              x:Class="GroupMeetup.LoginPage">
     <ContentPage.Content>
         <StackLayout>
@@ -11,15 +12,16 @@
             </StackLayout>
 
             <AbsoluteLayout Padding="0,40,0,0" >
-
-                <Entry Text="{Binding Username}"
+                <Entry x:Name="usernameField"
+                       Text="{Binding Username}"
                        Placeholder="Username"
                        BackgroundColor="#e4e2de"
                        TextColor="Black"
                        AbsoluteLayout.LayoutBounds=".5,0,.83,.25" 
                         AbsoluteLayout.LayoutFlags="All"
                        />
-                <Entry Text="{Binding Password}"
+                <Entry x:Name="passwordField"
+                       Text="{Binding Password}"
                        Placeholder="Password"
                        IsPassword="True"
                        BackgroundColor="#e4e2de"
@@ -32,17 +34,17 @@
                         TextColor="AntiqueWhite"
                         AbsoluteLayout.LayoutBounds=".5,.85,.85,.30"
                         AbsoluteLayout.LayoutFlags="All"
-                        Clicked="Button_Clicked"/>
+                        Clicked="loginClicked"/>
 
             </AbsoluteLayout>
             <StackLayout Padding="0,155,0,0">
                 <Grid>
-                    <Label Text="Sign In"
+                    <Label Text="Sign Up"
                        TextColor="AntiqueWhite"
                        Grid.Row="0" 
                        Grid.Column="0"
                        XAlign="Center"
-                       x:Name="signin">
+                       x:Name="signup">
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer
                                 Tapped="OnTapGestureRecognizerTapped"
