--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/ProfilePage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/ProfilePage.xaml
@@ -4,7 +4,45 @@
              x:Class="GroupMeetup.Views.TabbedPages.ProfilePage">
     <ContentPage.Content>
         <StackLayout>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="80"/>
+                </Grid.ColumnDefinitions>
+                <Image Source="logo.png"
+                       Grid.Row="0"
+                       Grid.Column="0"
+                       Grid.ColumnSpan="3"/>
+                <Label Text="Binding Name"
+                       Grid.Row="0"
+                       Grid.Column="1"/>
+                <Label Text="Username: "
+                       Grid.Row="1"
+                       Grid.Column="1"/>
+                <Label Text="Binding Username"
+                       Grid.Row="1"
+                       Grid.Column="1"/>
+                <Label Text="Email: "
+                       Grid.Row="2"
+                       Grid.Column="1"/>
+                <Label Text="Binding Email"
+                       Grid.Row="2"
+                       Grid.Column="1"/>
 
+            </Grid>
+            <StackLayout Padding="0,0,20,0,0">
+                <Label Text="Log out"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand"
+                 />
+                
+            </StackLayout>
+           
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
