friend request, chat tab -> notification tab

--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/SettingsPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/SettingsPage.xaml
@@ -6,10 +6,10 @@
              BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout>
-            <Button Text="Log out"
+            <!--<Button Text="Log out"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand"
-                    Clicked="Logout_Clicked"/>
+                    Clicked="Logout_Clicked"/> -->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
