--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/GPSPagexaml.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/GPSPagexaml.xaml
@@ -4,8 +4,9 @@
              xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              x:Class="GroupMeetup.TabbedPages.GPSPagexaml"
              Title="Map"
-             BackgroundColor="White">
-    <ContentPage.Content>
+             BackgroundColor="White"
+             Icon="gps_logo.png">
+    <ContentPage.Content >
         <AbsoluteLayout>
             <maps:Map x:Name="gpsMap"
                       IsShowingUser="true"
