--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/EventPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/EventPage.xaml
@@ -1,26 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-      
              x:Class="GroupMeetup.TabbedPages.EventPage"
-             Title="Events"
+             Icon="event_logo.png"
              BackgroundColor="White">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add Event" Icon="add_logo.png" Clicked="NewEvent_Clicked"></ToolbarItem>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <StackLayout Spacing="15">
-           
-            <Button Text="Add New Event"
-                    Clicked="NewEvent_Clicked"
-                    WidthRequest="80" 
-                    HeightRequest="80" 
-                    BorderRadius="40"
-                  VerticalOptions  ="Center"
-                 HorizontalOptions="Center"
-                    />
-            
+
+        <AbsoluteLayout>
+
+  
+
             <ListView x:Name="MeetingsListView" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -29,7 +22,17 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-         
-        </StackLayout>
+            <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="1,1.18,0.5,0.25">
+                <Button Image="add_logo.png"
+                        BackgroundColor="#72275b"
+                    Clicked="NewEvent_Clicked"
+                    WidthRequest="80" 
+                    HeightRequest="80" 
+                    BorderRadius="40"
+                   
+                    />
+            </StackLayout>
+            
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
