--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/FriendsPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/FriendsPage.xaml
@@ -12,25 +12,20 @@
 
             </StackLayout>
 
-            <!-- <ContentView x:Name="overlay" 
-                AbsoluteLayout.LayoutBounds="0, 0, 1, 1" 
-                AbsoluteLayout.LayoutFlags="All" 
-                BackgroundColor="#C0808080" 
-                Padding="10, 0">
+            
 
-                <StackLayout Padding="10" BackgroundColor="White" HorizontalOptions="Center" VerticalOptions="Center">
-                    <Label Text="Username Search" />
-                    <Entry x:Name="usernameSearch"
-                           Placeholder="Search for username"/>
+            <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="1,1.18,0.5,0.25">
+                <Button Image="addperson_logo.png"
+                        BackgroundColor="#72275b"
+                    Clicked="OnButtonClicked"
+                    WidthRequest="60" 
+                    HeightRequest="60" 
+                    BorderRadius="40"
+                   
+                    />
 
-                    <StackLayout Orientation="Horizontal">
-                        <Button Text="Cancel" 
-                                Clicked="Cancel_Clicked"/>
-                        <Button Text="Search"
-                                Clicked="SearchClicked"/>
-                    </StackLayout>
-                </StackLayout>
-            </ContentView> -->
+            </StackLayout>
+
         </AbsoluteLayout>
     </ContentPage.Content>
     </ContentPage>
