--- a/GroupMeetup/GroupMeetup/Views/ProfilePage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/ProfilePage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GroupMeetup.Views.TabbedPages.ProfilePage">
+             x:Class="GroupMeetup.Views.ProfilePage">
     <ContentPage.Content>
         <StackLayout>
             <Grid>
@@ -39,6 +39,12 @@
                 <Button x:Name="FriendButton"
                         Text="Add as Friend"
                         Clicked="FriendButtonClicked"
+                        VerticalOptions="CenterAndExpand"
+                        HorizontalOptions="CenterAndExpand"
+                        />
+                <Button x:Name="FriendRejectButton"
+                        Text="Reject Friend Request"
+                        Clicked="FriendRejectButtonClicked"
                         VerticalOptions="CenterAndExpand"
                         HorizontalOptions="CenterAndExpand"
                         />
