--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/FriendsPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/FriendsPage.xaml
@@ -10,9 +10,23 @@
                 AbsoluteLayout.LayoutBounds="0, 0, 1, 1" 
                 AbsoluteLayout.LayoutFlags="All">
 
+                <ListView x:Name="FriendsList" x:FieldModifier="public" ItemTapped="FriendsList_ItemTapped">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell Height="60">
+                                <StackLayout Orientation="Horizontal">
+                                    <!--<BoxView BackgroundColor="Blue" WidthRequest="10" Margin="0,0,0,10" />-->
+                                    <StackLayout Orientation="Vertical" Margin="5,5,10,5">
+                                        <Label Text="{Binding Username}"/>
+                                    </StackLayout>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackLayout>
 
-            
+
 
             <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="1,1.18,0.5,0.25">
                 <Button Image="addperson_logo.png"
@@ -28,4 +42,4 @@
 
         </AbsoluteLayout>
     </ContentPage.Content>
-    </ContentPage>
+</ContentPage>
