--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/NotificationPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/NotificationPage.xaml
@@ -12,20 +12,14 @@
                 HorizontalOptions="CenterAndExpand" />
             </StackLayout> -->
 
-        <ListView x:Name="NotificationsList"
-                              x:FieldModifier="public"
-                              
-                              ItemTapped="NotificationsList_ItemTapped">
+        <ListView x:Name="NotificationsList" x:FieldModifier="public" ItemTapped="NotificationsList_ItemTapped">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell Height="60">
-                        <StackLayout Orientation="Horizontal" BackgroundColor="#515689">
+                        <StackLayout Orientation="Horizontal">
                             <!--<BoxView BackgroundColor="Blue" WidthRequest="10" Margin="0,0,0,10" />-->
                             <StackLayout Orientation="Vertical" Margin="5,5,10,5">
                                 <Label Text="{Binding NotificationContent}"/>
-                                <!-- <Label Text="{Binding SeatCount, StringFormat='Seats: {0:F0}'}" TextColor="#FAEBDO"/>
-                                <Label Text="{Binding Bus.BusSchedule, StringFormat='Date: {0:MM/dd/yyyy HH:mm}'}" TextColor="#FAEBDO"/>
-                                <Label Text="{Binding TotalFare, StringFormat='Fare: PHP {0:F0} '}" TextColor="#FOA4A2" /> -->
                             </StackLayout>
                         </StackLayout>
                     </ViewCell>
