--- a/GroupMeetup/GroupMeetup/Views/TabbedPages/AdditionalPages/AddEventPage.xaml
+++ b/GroupMeetup/GroupMeetup/Views/TabbedPages/AdditionalPages/AddEventPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GroupMeetup.TabbedPages.AdditionalPages.AddEventPage"
+             xmlns:places="clr-namespace:DurianCode.PlacesSearchBar;assembly=PlacesSearchBar"
              Title="Add New Event">
     <ContentPage.Content>
         <StackLayout Spacing="10">
@@ -21,8 +22,20 @@
                 <TimePicker x:Name="EndTime"/>
                 
             </StackLayout>
-            
-            <Entry x:Name="Location" Placeholder="Location"/>
+
+            <places:PlacesBar x:Name="search_bar"></places:PlacesBar>
+            <AbsoluteLayout>
+                <ActivityIndicator x:Name="spinner" IsRunning="false"
+				AbsoluteLayout.LayoutBounds="0.5, 0.1, 50, 50" AbsoluteLayout.LayoutFlags="PositionProportional" />
+                <ListView x:Name="results_list" IsVisible="false"
+				AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="SizeProportional" >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextCell Text="{Binding Description}" Detail="{Binding Place_ID}" />
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </AbsoluteLayout>
             <Entry x:Name="Attendee" Placeholder="Attendee"/>
        
         </StackLayout>
